# SimFoundationConstruction

./: CMakeLists.txt  README.md
app/: CMake1.h  main.cpp
docs/: QUICKSTART.md  TABLE_OF_CONTENTS.md
docs/adr/: arch.md
docs/exercises/: 01-background-colors.md  02-animated-colors.md  03-first-triangle.md  04-rectangles.md  05-textures.md  06-transformations.md  07-mouse-interaction.md  08-multiple-sprites.md  09-sprite-animation.md  10-camera.md  README.md  final-project.md
docs/tasks/: Taska.md  Tasks.md
platform/: Win32Window.cpp  Win32Window.h
src/app/: main.cpp
src/core/: ScopedQpcTimer.cpp  ScopedQpcTimer.h  UniqueHandle.h
src/gfx/: Dx11Device.cpp  Dx11Device.h  DxError.h  MappedSubresource.h  MappedSubresourceGuard.h
tests/: test_comptr_checklist.cpp  test_dx11_device.cpp  test_mapped_subresource.cpp  test_scoped_qpc_timer.cpp  test_unique_handle.cpp
